--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "libs"
   ],
   "dependencies": {
+    "@social/libs": "1.0.0",
+    "body-parser": "^1.20.2",
     "eslint": "^8.35.0",
+    "express": "^4.18.2",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "ts-node": "^10.9.1"
   },
