--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint": "^8.35.0",
     "express": "^4.18.2",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
