--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,17 +1,12 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es2022",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "declaration": true,
-    "strict": true,
-    "incremental": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    /* Modules */
     "rootDir": "src",
-    "outDir": "dist",
-    "composite": true
-  }
+
+    /* Emit */
+    "outDir": "dist"
+  },
+  "include": ["src"],
+  "references": [{ "path": "../libs" }]
 }
