--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.1.0",
     "typescript": "^4.9.5",
     "ytdl-core": "^4.11.2"
   },
